style: Fix sizing, border radius, text color, spacing

--- a/ui/components/component-library/modal-content/modal-content.scss
+++ b/ui/components/component-library/modal-content/modal-content.scss
@@ -18,7 +18,7 @@
 
   // Webkit: Chrome, Brave
   ::-webkit-scrollbar {
-    width: 8px;
+    width: 2px;
   }
 
   ::-webkit-scrollbar-thumb {
